install bootrap and jquery

--- a/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/index.html
+++ b/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Mobile Phone Shop Admin Control Panel</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Trang chủ Admin</title>
 </head>
 <body>
 	<h1>Welcome to Mobile Phone Shop Admin Control Panel</h1>
