--- a/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/user_form.html
+++ b/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/user_form.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, inittial-scale=1.0, minimun-scale=1.0">
-	<title>Thêm nhân viên</title>
+	<title>[[${pageTitle}]]</title>
 	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
 	<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
 	<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
@@ -72,12 +72,13 @@
 		<!-- Kết thúc Header Menu -->
 
 		<div>
-			<h2>Quản lý nhân viên | Thêm nhân viên</h2>
+			<h2>Quản lý nhân viên | [[${pageTitle}]]</h2>
 		</div>
 		
 		<!-- Bắt đầu form thêm nhân viên -->
 		<form th:action="@{/users/save}" method="post" style="max-width: 700px; margin: 0 auto"
 			th:object="${user}" onsubmit="return checkEmailUnique(this)">
+			<input type="hidden" th:field="*{id}">
 			<div class="border border-secondary rounded p-3">
 				<div class="form-group row">
 					<label class="col-sm-4 col-form-label">Email:</label>
@@ -89,8 +90,10 @@
 				<div class="form-group row">
 					<label class="col-sm-4 col-form-label">Mật khẩu:</label>
 					<div class="col-sm-8">
-						<input type="password" class="form-control" th:field="*{password}" required minlength="6"
-							maxlength="20"/>
+						<input th:if="${user.id == null}" type="password" class="form-control" th:field="*{password}" 
+						required minlength="6" maxlength="20"/>
+						<input th:if="${user.id != null}" type="password" class="form-control" th:field="*{password}" 
+						placeholder="Để trắng nếu không muốn đổi mật khẩu" minlength="6" maxlength="20"/>
 					</div>
 				</div>
 				<div class="form-group row">
@@ -182,14 +185,17 @@
 		function checkEmailUnique(form)
 		{
 			url = "[[@{/users/check_email}]]";
-			userEmail = $("#email").val();
+			userEmail = $("#email").val();	
 			csrfValue = $("input[name='_csrf']").val();
-			params = {email: userEmail,_csrf: csrfValue};
+			userId = $('#id').val();
+			params = {id: userId, email: userEmail,_csrf: csrfValue};
 			
 			$.post(url,params, function(response)
 			{
 				if (response == "OK")
+				{
 					form.submit();
+				}
 				else if (response == "Duplicated")
 					showModalDialog("Cảnh báo", "Email đã tồn tại!")
 					else
@@ -201,7 +207,7 @@
 			return false;
 		}
 		
-		// Hiện thông báo email bị trùng
+		// Hiện thông báo / message tương ứng
 		function showModalDialog(title, message)
 		{
 			$("#modalTitle").text(title);
