--- a/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/user_form.html
+++ b/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/user_form.html
@@ -77,7 +77,7 @@
 		
 		<!-- Bắt đầu form thêm nhân viên -->
 		<form th:action="@{/users/save}" method="post" style="max-width: 700px; margin: 0 auto"
-			th:object="${user}" onsubmit="return checkEmailUnique(this)">
+			enctype="multipart/form-data" th:object="${user}" onsubmit="return checkEmailUnique(this)">
 			<input type="hidden" th:field="*{id}">
 			<div class="border border-secondary rounded p-3">
 				<div class="form-group row">
@@ -97,7 +97,7 @@
 					</div>
 				</div>
 				<div class="form-group row">
-					<label class="col-sm-4 col-form-label">Họ:</label>
+					<label class="col-sm-4 col-form-label">Họ lót:</label>
 					<div class="col-sm-8">
 						<input type="text" class="form-control" th:field="*{lastName}" required minlength="2"
 							maxlength="45"/>
@@ -126,6 +126,14 @@
 					<label class="col-sm-4 col-form-label">Cho phép hoạt động:</label>
 					<div class="col-sm-8">
 						<input type="checkbox" th:field="*{enabled}">
+					</div>
+				</div>
+				<div class="form-group row">
+					<label class="col-sm-4 col-form-label">Ảnh đại diện:</label>
+					<div class="col-sm-8">
+						<input type="hidden" th:field="*{photos}">	
+						<input type="file" id="fileImage" name="image" accept="image/png, image/jpeg">
+						<img id="thumbnail" alt="Ảnh mẫu" th:src="@{${user.photosImagePath}}">
 					</div>
 				</div>
 				
@@ -172,14 +180,44 @@
 	
 	<!-- Bắt đầu code javascript -->
 	<script type="text/javascript">
-		// Ấn nút Hủy thì quay về trang Quản lý nhân viên
+		// Khi khởi động trang users_form
 		$(document).ready(function()
 		{
+			// Ấn nút Hủy thì quay về trang Quản lý nhân viên
 			$("#buttonCancel").on("click", function()
 			{
 				window.location = "[[@{/users}]]";			
-			});		
+			});
+			
+			// Load file ảnh lên trang users_form
+			$	("#fileImage").change(function()
+			{
+				fileSize = this.files[0].size;
+				if(fileSize > 1048576)
+				{
+					this.setCustomValidity("Bạn phải chọn ảnh có dung lượng bé hơn 1mb!");
+					this.reportValidity();
+				} else
+				{
+					this.setCustomValidity("");
+					showImageThumnail(this);	
+				}
+							
+			});
 		});
+		
+		// Hiện ảnh đại diện lên trang users_form
+		function showImageThumnail(fileInput)
+		{
+			var file = fileInput.files[0];
+			var reader = new FileReader();
+			reader.onload = function(e)
+			{
+				$("#thumbnail").attr("src", e.target.result)
+			};
+			reader.readAsDataURL(file);
+		}
+		
 		
 		// Kiểm tra Email đã tồn tại hay chưa?
 		function checkEmailUnique(form)
