--- a/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/index.html
+++ b/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopBackEnd/src/main/resources/templates/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="viewport" content="width=device-width, inittial-scale=1.0, minimun-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 	<title>Trang chủ Admin</title>
 	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/style.css}">
 	<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
 	<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
@@ -15,6 +18,10 @@
 
 		<!-- Bắt đầu Header Menu -->
 		<div>
+			<form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
+				<input type="submit" >
+			</form>
+			
 			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
 
 				<!-- Bắt đầu Logo -->
@@ -23,7 +30,7 @@
 				</a>
 				<!-- Kết thúc Logo -->
 				
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topNavbar">
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 
@@ -63,6 +70,16 @@
 						<li class="nav-item">
 							<a class="nav-link" th:href="@{/settings}">Chỉnh sửa</a>
 						</li>
+						<li>
+							<span class="fas fa-user fa-2x icon-silver"></span>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-toggle="dropdown" 
+							sec:authentication="principal.fullName">Chỉnh sửa</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" href="" id="logoutLink">Đăng xuất</a>
+							</div>
+						</li>
 					</ul>
 				</div>
 				<!-- Kết thúc menu -->
@@ -83,6 +100,18 @@
 
 	</div>
 	<!-- Kết thúc giao diện chính -->
-
+	
+	<!-- Bắt đầu code javascript -->
+	<script type="text/javascript">
+		$(document).ready(function()
+		{
+			$("#logoutLink").on("click", function(e)
+			{
+				e.preventDefault();
+				document.logoutForm.submit();
+			})
+		});
+	</script>
+	<!-- Kết thúc code javascript -->
 </body>
 </html>
